Timer accounted for

--- a/Homework/index.html
+++ b/Homework/index.html
@@ -11,7 +11,9 @@
   <body>
     <div id="introDiv">
       <h1>Welcome to Ev's Rockin Music Trivia!</h1>
-      <h3>Think you know it all about music? Get ready to test your skills!</h3>
+      <h3>
+        Think you know it all about music ? Get ready to test your skills!
+      </h3>
 
       <button id="start">Start!</button>
     </div>
@@ -102,8 +104,10 @@
           Tryon, NC
         </button>
       </div>
-
-      <div id="scoreDiv"></div>
+      <div class="alertDiv">
+        <p>Correct Answers: <span class="numberCorrect"></span></p>
+        <p>Incorrect Answers: <span class="numberIncorrect"></span></p>
+      </div>
     </div>
   </body>
 </html>
